# earthbridge

./: .gitignore  README.md  SUBMISSION_README.md  environment.yml  pyproject.toml  requirements-ml.txt  requirements.txt
configs/: data.yaml  evaluation.yaml
docs/: CLOUD_TRAINING.md  FINAL_DEMO.md  PROJECT_STATUS.md
notebooks/: colab_train_baseline.ipynb  kaggle_train_baseline.ipynb
scripts/: benchmark_latency.py  build_indexes.py  build_manifest.py  check_manifest.py  create_demo_index.py  create_splits.py  evaluate_descriptors.py  evaluate_rankings.py  export_artifacts.py  generate_descriptors.py  inspect_data.py  run_cloud_pipeline.py  run_tiny_overfit_matrix.py  train_baseline.py  verify_artifacts.py
src/earthbridge/: __init__.py  artifacts.py
src/earthbridge/api/: __init__.py  main.py  schemas.py  service.py
src/earthbridge/data/: __init__.py  bigearthnet.py  dataset.py  image_io.py  inspection.py  manifest.py  pairs.py  splitting.py  validation.py
src/earthbridge/evaluation/: __init__.py  descriptor_eval.py  evaluator.py  metrics.py  relevance.py
src/earthbridge/losses/: __init__.py  contrastive.py
src/earthbridge/models/: __init__.py  (+5 more)
tests/: test_api_service.py  test_artifacts.py  test_bigearthnet_ben14k.py  test_cloud_pipeline.py  test_dashboard.py  test_demo_artifacts.py  test_descriptor_eval.py  test_encoding.py  test_faiss_index.py  test_image_io.py  test_losses.py  test_manifest_validation.py  test_metrics.py  test_models.py  test_pairs.py  test_relevance.py  test_search.py  test_splits.py  test_tiny_overfit_matrix.py  test_training.py
(+9 files in other folders)
